Bug 462995 Cannot type 2 or more characters from software keyboard r=josh+smichaud, sr=roc, a=beltzner